<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="117dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/login_img_description"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:fontFamily="@font/inter_semibold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="34dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_description"
            android:fontFamily="@font/inter_semibold"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:layout_marginBottom="34dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/login_email_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="364dp"
                android:layout_height="49dp"
                android:background="@drawable/rounded_background_input"
                android:minWidth="364dp"
                android:paddingTop="0dp"
                android:paddingBottom="5dp"
                app:boxBackgroundMode="none"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="324dp"
                    android:layout_height="40dp"
                    android:hint=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:gravity="center_vertical|start"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/login_password_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="364dp"
                android:layout_height="49dp"
                android:background="@drawable/rounded_background_input"
                android:minWidth="364dp"
                android:paddingTop="0dp"
                android:paddingBottom="5dp"
                app:boxBackgroundMode="none"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="324dp"
                    android:layout_height="40dp"
                    android:hint=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:gravity="center_vertical|start"
                    android:textSize="14sp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <CheckBox
            android:id="@+id/my_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login_rememberme_label"
            android:checked="false"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:minWidth="364dp"
            android:buttonTint="@drawable/checkbox_state"  />

        <Button
            android:id="@+id/login_button"
            android:layout_width="364dp"
            android:layout_height="44dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_button_black"
            android:fontFamily="@font/inter_semibold"
            android:letterSpacing=".02"
            android:text="@string/login_login_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="14sp" />



        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Left Line -->
            <View
                android:layout_width="0dp"
                android:layout_height="2.5dp"
                android:layout_weight="1"
                android:background="#A0A0A0" />

            <!-- Text in the center -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:paddingHorizontal="8dp"
                android:text="@string/login_or"
                android:textSize="14sp"
                android:textColor="#A0A0A0" />

            <!-- Right Line -->
            <View
                android:layout_width="0dp"
                android:layout_height="2.5dp"
                android:layout_weight="1"
                android:background="#A0A0A0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleSignInButton"
            android:layout_width="364dp"
            android:layout_height="44dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_google"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/login_github_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_google_button"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/inter_semibold"
                android:letterSpacing="0.02"
                android:gravity="center_vertical"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/githubSignInButton"
            android:layout_width="364dp"
            android:layout_height="44dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_black"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_github"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/login_github_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login_github_button"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/inter_semibold"
                android:letterSpacing="0.02"
                android:gravity="center_vertical"
                android:textAllCaps="false" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <!-- Text in the center -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:paddingRight="2dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/login_to_register" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:letterSpacing=".02"
                android:text="@string/login_register_button"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:gravity="center"
                android:textSize="14sp"
                android:background="#FFFFFF"
                />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>